# hrm-jax

./: .gitignore  GEMINI.md  README.md  debug_compare_jax_torch.py  debug_step_compare.py  evaluate_jax.py  pretrain.py  pretrain_jax.py  pyproject.toml  run  train_arc  train_sudoku
config/arch/: hrm_v1.yaml
models/: layers.py  losses.py
models/hrm/: hrm_act_v1.py
models/hrm_jax/: attn.py  common.py  hrm_act_v1.py  layers.py  losses.py
