[project]
name = "hrm"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "adam-atan2>=0.0.3",
    "argdantic>=1.3.3",
    "coolname>=2.2.0",
    "einops>=0.8.1",
    "equinox>=0.13.0",
    "flax>=0.11.0",
    "huggingface-hub>=0.34.3",
    "hydra-core>=1.3.2",
    "jax[tpu]>=0.7.0",
    "numpy>=2.1.2",
    "omegaconf>=2.3.0",
    "pydantic>=2.11.7",
    "torch>=2.7.1",
    "wandb>=0.21.0",
]


[[tool.uv.index]]
name = "torch"
url = "https://download.pytorch.org/whl/cpu"
